[package]
name = "nomophobic-ac-net"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "nomophobic_ac_net"
crate-type = ["cdylib"] # Dynamic libary
path = "./src/lib.rs"
default-features = false
test = true
bench = true
doc = true
plugin = false
proc-macro = false
harness = true

[[bin]]
name = "arc_collection_processor"
path = "src/bin/arc_collection_processor.rs"

[[bin]]
name = "signal_usage_observer"
path = "src/bin/signal_usage_observer.rs"

[[bin]]
name = "mod"
path = "src/bin/mod.rs"


[dependencies]
clap = "4.1.8"
libm = { default-features = false, version = "0.2.6" }
reqwest = { version = "0.11.8", features = ["blocking", "cookies", "json"] }
rocket = { version = "0.5.0-rc.2", features = ["json"] }
serde = { version = "1.0.132", features = ["derive"] }
similar = "2.2.1"
# async-std + native-tls
# serde's JSON is different in rocket due to interface complexity
# Tokio: tokio + native-tls (OS derived TLS) for security
spin = "0.9.5"
sqlx = { version = "0.6", features = [ "runtime-tokio-native-tls" , "postgres" ] }
tokio = { version = "1", features = ["full"] }
wasm-bindgen = { version = "0.2.51", features = ["serde-serialize"]  }
wasm-bindgen-futures = "0.4.1"
web-sys = { version = "0.3", features = [ "HtmlInputElement" ] }
winreg = "0.11.0"
yew = { version = "0.20.0", features = ["csr"] }
yew-agent = "0.2.0"

[dependencies.neon]
version = "0.10.1"
default-features = false
features = ["channel-api", "napi-6", "promise-api", "task-api"]

[dependencies.windows]
version = "0.44.0"
features = [
    "Data_Xml_Dom",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Com",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
]

[features]
hydration = ["yew/hydration"]
ssr = ["yew/ssr"]

[profile.dev]
panic = "abort"
opt-level = 2

[profile.dev.package.sqlx-macros]
opt-level = 3

[profile.release]
codegen-units = 1
lto = "fat"
strip = "symbols"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
wasm-logger = "0.2"
log = "0.4"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.15.0", features = ["full"] }
warp = "0.3"
clap = { version = "4.1.8", features = ["derive"] }